# RES4LYF

./: .gitignore  LICENSE  README.md  __init__.py  attention_masks.py  conditioning.py  config.py  extra_samplers.py  extra_samplers_helpers.py  helper.py  helper_sigma_preview_image_preproc.py  hidream guide flow.json  hidream guide lure.json  images.py  latent_images.py  latents.py  legacy_sampler_rk.py  legacy_samplers.py  loaders.py  memory_profiler.py  models.py  nodes_latents.py  nodes_misc.py  nodes_precision.py  noise_classes.py  noise_sigmas_timesteps_scaling.py  phi_functions.py  pyproject.toml  refined_exp_solver.py  requirements.txt  res4lyf.config.json  res4lyf.py  rk_coefficients.py  rk_coefficients_beta.py  rk_guide_func.py  rk_guide_func_beta.py  rk_method.py  rk_method_beta.py  rk_sampler.py  rk_sampler_beta.py  (+11 more)
aura/: mmdit.py
beta/: __init__.py  constants.py  deis_coefficients.py  noise_classes.py  phi_functions.py  rk_coefficients_beta.py  rk_guide_func_beta copy.py  rk_guide_func_beta.py  rk_method_beta.py  rk_noise_sampler_beta.py  rk_sampler_beta.py  samplers.py  samplers_extensions.py
chroma/: layers.py  math.py  model.py
example_workflows/: chroma regional antiblur.json  chroma txt2img.json  comparison ksampler vs csksampler chain workflows.json  flux faceswap sync pulid.json  flux faceswap sync.json  flux faceswap.json  flux inpaint area.json  flux inpaint bongmath.json  flux inpainting.json  flux regional antiblur.json  flux regional redux (2 zone).json  flux regional redux (3 zone, nested).json  flux regional redux (3 zone, overlapping).json  flux regional redux (3 zones).json  flux style antiblur.json  flux style transfer gguf.json  flux upscale thumbnail large multistage.json  flux upscale thumbnail large.json  flux upscale thumbnail widescreen.json  hidream guide data projection.json  hidream guide epsilon projection.json  hidream guide fully_pseudoimplicit.json  hidream guide pseudoimplicit.json  hidream hires fix.json  hidream regional 3 zones.json  hidream regional antiblur.json  hidream style antiblur.json  hidream style transfer txt2img.json  hidream style transfer v2.json  hidream style transfer.json  hidream txt2img.json  hidream unsampling data.json  hidream unsampling pseudoimplicit.json  hidream unsampling.json  intro to clownsampling.json  sd35 medium unsampling data.json  sd35 medium unsampling.json  sdxl regional antiblur.json  sdxl style transfer.json  style transfer.json  (+5 more)
flux/: controlnet.py  layers.py  math.py  model.py  redux.py
hidream/: model.py  samplers_extensions.py
legacy/: __init__.py  conditioning.py  constants.py  helper.py  latents.py  legacy_sampler_rk.py  legacy_samplers.py  models.py  noise_classes.py  noise_sigmas_timesteps_scaling.py  res4lyf.config.json  res4lyf.py  rk_coefficients.py  rk_guide_func.py  rk_method.py  rk_sampler.py  samplers.py  samplers_extensions.py  samplers_tiled.py  sigmas.py
legacy/flux/: layers.py
lightricks/: model.py
misc_scripts/: replace_metadata.py
sd/: attention.py  openaimodel.py
sd35/: mmdit.py
wan/: model.py
(+5 files in other folders)
